--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -88,6 +88,11 @@
                 </div>
             </footer>
         </div>
+        <div class="popup_wrapper">
+            <div class="popup">
+                
+            </div>
+        </div>   
         <script src="script.js"></script>    
     </div>
     
